--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,12 +1,5 @@
 musicInterfaceTitle=Musik-Player
-musicInterfaceDescription=Introducing our Discord Music bot, the ultimate solution for all your music needs on Discord!\
-Our bot is packed with features that allow you to listen to your favorite songs and playlists directly from your Discord server.\
-With support for multiple music sources including YouTube, SoundCloud, and Spotify, you can\
-easily search and play your favorite tracks with just a few clicks.\
-Our bot offers a range of playback features including volume control, track skipping, and song queuing,\
-making it easy to customize your listening experience. With our Discord Music bot, you can keep the party\
-going and provide your Discord server members with the ultimate music experience.\
-Try it now and take your Discord server to the next level!
+musicInterfaceDescription=Introducing our Discord Music bot, the ultimate solution for all your music needs on Discord! Our bot is packed with features that allow you to listen to your favorite songs and playlists directly from your Discord server. With support for multiple music sources including YouTube, SoundCloud, and Spotify, you can easily search and play your favorite tracks with just a few clicks. Our bot offers a range of playback features including volume control, track skipping, and song queuing, making it easy to customize your listening experience. With our Discord Music bot, you can keep the party going and provide your Discord server members with the ultimate music experience. Try it now and take your Discord server to the next level!
 musicInterfacePlaying=Spielt:
 musicInterfaceQueue=Warteschlange:
 unknownError=Ein unerwarteter Fehler ist aufgetreten!
